Allow markdown links in the blog posts

--- a/src/content/blog/501c3.md
+++ b/src/content/blog/501c3.md
@@ -22,6 +22,6 @@ Companies providing support to DDEV do not normally get much benefit from this, 
 
 US individuals providing direct support to the DDEV Foundation can write off the donation on their federal income tax return. However, to do I think the support must be provided directly to the DDEV Foundation, and not via GitHub.
 
-Thanks to all of you for working toward realizing our goal of a sustainable project! For more information about how you can support the project, the various ways are explained in [sponsors page](https://github.com/sponsors/ddev). See more about our long-term financial goals at [Expanding the DDEV maintainer team - how we'll fund it](/blog/expanding-ddev-maintainer-team).
+Thanks to all of you for working toward realizing our goal of a sustainable project! For more information about how you can support the project, the various ways are explained in [sponsors page](https://github.com/sponsors/ddev). See more about our long-term financial goals at [Expanding the DDEV maintainer team - how we'll fund it](expanding-ddev-maintainer-team.md).
 
 ![US 501(c)(3) non-profit](/img/blog/2024/03/501c3.png)
