perform 'npx prettier --write .' and auto-format all files

--- a/src/content/blog/501c3.md
+++ b/src/content/blog/501c3.md
@@ -7,7 +7,7 @@ author: Randy Fay
 featureImage:
   src: /img/blog/2024/03/uncle-sam-501c3.png
   alt: DDEV receives 501(c)(3) status from US Government
-  credit: 'Ideogram.ai: Uncle Sam, the quintessential symbol of the United States, proudly presenting a scroll to a representative of the DDEV Foundation.'
+  credit: "Ideogram.ai: Uncle Sam, the quintessential symbol of the United States, proudly presenting a scroll to a representative of the DDEV Foundation."
 categories:
   - Announcements
 ---
